--- a/style.css
+++ b/style.css
@@ -82,13 +82,57 @@ input {
 .cart {
     padding: 2% 8%;
 }
-.cart p {
-    margin-bottom: 20px;
-}
-.cart-data {
+.cart-details {
+    padding: 20px;
+    margin-top: 30px;
     display: flex;
     justify-content: space-between;
 }
+.product-details {
+    display: flex;
+    margin: 40px 0;
+}
+.product-details img {
+    margin-right: 20px;
+}
+.product-details p {
+    margin-top: 25px;
+}
+.price-details p { 
+    margin: 70px 0;
+}
+.quantity-details {
+    margin: 60px 0;
+}
+.btn-quantity p {
+    margin: 8px 10px 0 0;
+}
+.btn-quantity {
+    padding: 0 10px;
+    display: flex;
+}
+.dropdown-up {
+    position: absolute;
+    
+}
+.dropdown-down {
+    margin-top: 10px;
+    position: relative; 
+}
+.subtotal-details p {
+    margin: 70px 0;
+}
+.btn {
+    display: flex;
+    justify-content: space-between;
+}
+.cart-btn {
+    padding: 10px 30px;
+    border: 2px solid #828288;
+    border-radius: 4px;
+    background-color: #FFFF;
+}
+
 /* Cart End */
 /* Footer Start */
 .footer{
