--- a/style.css
+++ b/style.css
@@ -71,12 +71,43 @@ input {
 .icons {
     height: 40px;
     display: flex;
-    gap: 10px;
-}
-.icons img {
+    gap: 20px;
+    justify-content: center;
     align-items: center;
 }
 
+.love {
+    width: 20px;
+    height: 18px;
+    position: absolute;
+}
+.rectangel-4 {
+    position: relative;
+    width: 16px;
+    height: 16px;
+    background-color: #DB4444;
+    color: #FFFF;
+    border-radius: 50%;
+    bottom: 6px;
+    left: 10px;
+    text-align: center;
+}
+.shop {
+    width: 24px;
+    height: 24px;
+    position: absolute;
+}
+.rectangel-2 {
+    position: relative;
+    width: 16px;
+    height: 16px;
+    background-color: #DB4444;
+    color: #FFFF;
+    border-radius: 50%;
+    bottom: 6px;
+    left: 13px;
+    text-align: center;
+}
 /* Navbar End */
 /* Cart Start */
 .cart {
@@ -97,6 +128,13 @@ input {
 }
 .product-details p {
     margin-top: 25px;
+}
+.monitor {
+    position: relative;
+}
+.cancel {
+    position: absolute;
+    left: 9%;
 }
 .price-details p { 
     margin: 70px 0;
@@ -132,7 +170,60 @@ input {
     border-radius: 4px;
     background-color: #FFFF;
 }
-
+.total-cart {
+    padding: 2% 8%;
+    display: flex;
+    
+}
+.total-cart-left {
+    width: 50%;
+}
+.cupone-code {
+    padding: 10px 30px;
+    color: #828288;
+    border-left:  2px solid #828288;
+    border-bottom:  2px solid #828288;
+    background-color: #FFFF;
+    border-radius: 4px;
+    margin-right: 20px;
+}
+.appling-cupone {
+    padding: 10px 30px;
+    background-color: #DB4444;
+    border: none;
+    border-radius: 4px;
+    color: #FFFF;
+}
+.total-cart-right {
+    margin-left: auto;
+}
+.total-cart-container {
+    width: 470px;
+    height: 280px;
+    padding: 20px 15px;
+    border: 2px solid #0D0D0D;
+    border-radius: 4px;
+    border-left: 2px solid #828288;
+    border-right: 2px solid #828288;
+}
+.cart-price {
+    display: flex;
+    justify-content: space-between;
+}
+.cart-price P {
+    margin: 20px 0;
+}
+.hr-1 {
+    border: 1.5px solid #d6d4d4;
+}
+.checkout {
+    padding: 10px 30px;
+    background-color: #DB4444;
+    border: none;
+    border-radius: 4px;
+    color: #FFFF;
+    margin-left: 120px;
+}
 /* Cart End */
 /* Footer Start */
 .footer{
